# gql_db

./: .gitignore  Cargo.toml  README.md  SETUP.md  build.rs  package-lock.json  test_read_table.db  test_readterator.db
.github/workflows/: format.yml  rust.yml
proto/: connection.proto  todo.proto
src/: main.rs  server.rs
src/btree/: btree.rs  indexes.rs  internal_index_page.rs  leaf_index_page.rs  mod.rs
src/client/: client.rs  main.rs  mod.rs  result_parse.rs
src/client/gui/: main.rs  mod.rs  window.rs
src/client/gui/login/: window.rs
src/client/gui/style/: style.rs
src/client/gui/welcome_page/: window.rs
src/executor/: aggregate.rs  mod.rs  predicate.rs  query.rs  select.rs  table_iterator.rs
src/fileio/: README.md  databaseio.rs  header.rs  index.rs  mod.rs  pageio.rs  rowio.rs  tableio.rs
src/parser/: mod.rs  parse_command.rs  parser.rs  tree.rs  vc_commands.rs
src/server/: connection.rs  mod.rs  server.rs
src/user/: mod.rs  usercreds.rs  userdata.rs
src/util/: bench.rs  convert.rs  dbtype.rs  mod.rs  row.rs  valuetype.rs
src/version_control/: README.md  branch_heads.rs  branches.rs  command.rs  commit.rs  commitfile.rs  del_branch.rs  diff.rs  log.rs  merge.rs  merged_branches.rs  mod.rs
