[package]
name = "gql_db"
version = "0.1.0"
description = "A SQL database server, with integrated Version Control"
edition = "2021"
default-run = "gql"

[[bin]]
name = "gql"
path = "src/main.rs"

[[bin]]
name = "gql-client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Currently going with the latest versions of each dependency, hope nothing breaks
[dependencies]
tonic = "0.8.0"
prost = "0.11.0"
prost-types = "0.11.0"
tokio = { version = "1.21.0", features = ["full"] }
rand = "0.8.5"
clap = { version = "3.2.22", features = ["derive"] }
positioned-io = "0.3.0"
itertools = "0.10.5"

[build-dependencies]
tonic-build = "0.8.0"